[package]
name = "canviewer"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "canviewerrs"
path = "src/main.rs"

[dependencies]
clap={version = "4.0.15", features=["derive"]}
eframe = {version="0.19.0", features=["wgpu"]}
egui_extras = "0.19.0"
image = "0.24.1"
backend={path="../backend"}
ecu_diagnostics="0.90.51"